force-app/main/default/objects/Consulting_Time_Tracker__c/Consulting_Time_Tracker__c.object-meta.xml
<CustomObject>
    <label>Consulting Time Tracker</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Consulting Time Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consulting Time Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>