force-app/main/default/objects/Consulting_Time_Tracker__c/fields/Billable_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable_Non_Billable__c</fullName>
    <label>Billable/Non-Billable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Non-billable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>