force-app/main/default/objects/Consulting_Time_Tracker__c/fields/Compensation_Advisory__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Advisory__c</fullName>
    <label>Compensation Advisory</label>
    <length>10</length>
    <type>Text</type>
</CustomField>