force-app/main/default/objects/Consulting_Time_Tracker__c/fields/Consultant_Name__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Consulting_Time_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>