force-app/main/default/objects/Consulting_Time_Tracker__c/fields/Consulting_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Consulting_End_Date__c</fullName>
    <label>Consulting End Date</label>
    <type>Date</type>
</CustomField>