force-app/main/default/objects/Consulting_Time_Tracker__c/fields/Consulting_Project_Titles__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Project_Titles__c</fullName>
    <label>Consulting Project Titles</label>
    <type>TextArea</type>
</CustomField>