force-app/main/default/objects/Consulting_Time_Tracker__c/fields/Consulting_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Resource_Type__c</fullName>
    <label>Consulting Resource Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sr. Change Advisor</fullName>
            </value>
            <value>
                <fullName>Change Advisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>