force-app/main/default/objects/Consulting_Time_Tracker__c/fields/Consulting_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Start_Date__c</fullName>
    <label>Consulting Start Date</label>
    <type>Date</type>
</CustomField>