force-app/main/default/objects/Consulting_Time_Tracker__c/fields/Consulting_Time_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Time_Tracker__c</fullName>
    <label>Consulting Time Tracker</label>
    <referenceTo>Training_Event__c</referenceTo>
    <relationshipLabel>Consulting Time Trackers</relationshipLabel>
    <relationshipName>Consulting_Time_Trackers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>