force-app/main/default/objects/Consulting_Time_Tracker__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <label>Hours Worked</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>