force-app/main/default/objects/Consulting_Time_Tracker__c/fields/Location_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Work__c</fullName>
    <label>Location of Work</label>
    <type>TextArea</type>
</CustomField>