force-app/main/default/objects/Consulting_Time_Tracker__c/fields/of_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>of_Hours_Worked__c</fullName>
    <formula>VALUE(TEXT(  Hours_Worked__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Hours Worked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>