force-app/main/default/objects/Consulting_Time_Tracker__c/fields/Summary_Notes__c.field-meta.xml
<CustomField>
    <fullName>Summary_Notes__c</fullName>
    <label>Summary/Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>