force-app/main/default/objects/Consulting_Time_Tracker__c/fields/Type_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Work__c</fullName>
    <label>Type of Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Client</fullName>
            </value>
            <value>
                <fullName>Deliverables</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Development Work - Internal</fullName>
            </value>
            <value>
                <fullName>On Call for Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>